--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NOTE:  The actual updating should use the update_cos_halos method in cos_halos.py"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -265,6 +272,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Generating v1.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Update $N_{\\rm HI}$ measurements (Prochaska+16)"
    ]
   },
@@ -277,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -287,14 +301,63 @@
      "output_type": "stream",
      "text": [
       "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load COS-Halos\n",
-      "Skipping a likely folder: CGM_JSON\n"
+      "Skipping a likely folder: CGM_JSON"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1128.01 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1260.42 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1334.53 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=944.523 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1193.29 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1037.62 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1304.37 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1302.17 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1190.42 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1025.72 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=2803.53 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1526.71 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1550.77 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=949.743 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1242.8 Angstrom does not match component rules. Not appending\n",
+      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
      ]
     }
    ],
    "source": [
     "reload(pch)\n",
-    "cos_halos = pch.COSHalos()\n",
-    "cos_halos.load_sys(tfile=cos_halos.cdir+'/cos-halos_systems.v1.0.tar.gz')"
+    "cos_halos_v10 = pch.COSHalos()\n",
+    "cos_halos_v10.load_sys(tfile=cos_halos.cdir+'/cos-halos_systems.v1.0.tar.gz')"
    ]
   },
   {
@@ -306,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import json\n",
-    "LLS_file = cos_halos.cdir + '/Updates/COS_Halos_LLS.json'\n",
+    "LLS_file = cos_halos_v10.cdir + '/Updates/COS_Halos_LLS.json'\n",
     "with open(LLS_file) as json_file:\n",
     "    fdict = json.load(json_file)\n",
     "#fdict"
@@ -328,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -352,59 +415,15 @@
     "        raise ValueError(\"No match?!\")\n",
     "    # Fill in \n",
     "    if fdict[key]['flag_NHI'] == 1:\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][0]\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.sig_NHI = (fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][1])/2.\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.flag_NHI = 1\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][0]\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.sig_NHI = (fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][1])/2.\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 1\n",
     "    elif fdict[key]['flag_NHI'] == 2:\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][1]\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.flag_NHI = 2\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][1]\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 2\n",
     "    elif fdict[key]['flag_NHI'] == 3:\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][2]\n",
-    "        cos_halos.cgm_abs[mt[0]].igm_sys.flag_NHI = 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Write"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tarfil = os.getenv('DROPBOX_DIR')+'COS-Halos-Data/cos-halos_systems.v1.1.tar.gz'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote: /u/xavier/Dropbox/COS-Halos-Data/cos-halos_systems.v1.1.tar.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "cos_halos.write_survey(tarfil)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][2]\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 3"
    ]
   },
   {
@@ -420,49 +439,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load JSON files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cos_halos = COSHalos()\n",
-    "cos_halos.load_sys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Load bad ions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import yaml\n",
-    "filename = cos_halos.cdir + '/Updates/COS_Halos_ions_updates.yaml'\n",
+    "filename = cos_halos_v10.cdir + '/Updates/COS_Halos_ions_updates.yaml'\n",
     "with open(filename, 'r') as infile:\n",
     "        up_ion_data = yaml.load(infile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'J0910+1014_34_46': {'ion': {'7,2': {'flag_N': 3}}},\n",
+       " 'J0943+0531_227_19': {'ion': {'6,2': {'flag_N': 3}, '7,2': {'flag_N': 3}}},\n",
+       " 'J1233+4758_94_38': {'ion': {'6,3': {'flag_N': 0}}},\n",
+       " 'J1342-0053_157_10': {'trans': {'OI 971': {'flag_N': 3}}},\n",
+       " 'J1435+3604_68_12': {'trans': {'OI 971': {'flag_N': 3}}},\n",
+       " 'J1619+3342_113_40': {'ion': {'6,2': {'flag_N': 3}}}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "up_ion_data"
    ]
@@ -473,18 +489,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "names = cos_halos.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<AbsComponent: 12:33:35.1 +47:58:00.5, Name=CIII_z0.22210, Zion=(6,3), Ej=0 1 / cm, z=0.222103, vlim=-600 km / s,600 km / s>\n",
+      "> <ipython-input-16-af7e6519a149>(9)<module>()\n",
+      "-> for ionkey in up_ion_data[key][mod_type].keys():\n"
+     ]
+    }
+   ],
    "source": [
     "for key in up_ion_data.keys():\n",
     "    # Match\n",
@@ -492,16 +507,19 @@
     "    if len(mt) != 1:\n",
     "        raise ValueError(\"No match?!\")\n",
     "    # Fill in \n",
-    "    for ionkey in up_ion_data[key].keys():\n",
-    "        Zion = tuple([int(ii) for ii in ionkey.split(',')])\n",
-    "        #\n",
-    "        Zicomp = [comp.Zion for comp in cos_halos.cgm_abs[mt[0]].igm_sys._components]\n",
-    "        mtZi = Zicomp.index(Zion)\n",
-    "        # Set\n",
-    "        for att_key in up_ion_data[key][ionkey].keys():\n",
-    "            if att_key == 'flag_N':\n",
-    "                cos_halos.cgm_abs[mt[0]].igm_sys._components[mtZi].flag_N = up_ion_data[key][ionkey][att_key]\n",
-    "        print(cos_halos.cgm_abs[mt[0]].igm_sys._components[mtZi])"
+    "    for mod_type in up_ion_data[key].keys():\n",
+    "        if mod_type == 'ion':\n",
+    "            for ionkey in up_ion_data[key][mod_type].keys():\n",
+    "                Zion = tuple([int(ii) for ii in ionkey.split(',')])\n",
+    "                #\n",
+    "                Zicomp = [comp.Zion for comp in cos_halos_v10.cgm_abs[mt[0]].igm_sys._components]\n",
+    "                mtZi = Zicomp.index(Zion)\n",
+    "                # Set\n",
+    "                for att_key in up_ion_data[key][mod_type][ionkey].keys():\n",
+    "                    if att_key == 'flag_N':\n",
+    "                        cos_halos_v10.cgm_abs[mt[0]].igm_sys._components[mtZi].flag_N = up_ion_data[key][mod_type][ionkey][att_key]\n",
+    "                print(cos_halos_v10.cgm_abs[mt[0]].igm_sys._components[mtZi])\n",
+    "                xdb.set_trace()"
    ]
   },
   {
@@ -519,7 +537,7 @@
    },
    "outputs": [],
    "source": [
-    "tarfil = cos_halos.cdir+'/cos-halos_systems.v1.2.tar.gz'"
+    "tarfil = cos_halos.cdir+'/cos-halos_systems.v1.1.tar.gz'"
    ]
   },
   {
