--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Halos Database (v1.0)\n",
+    "# COS-Halos Database (v1.1)\n",
     "\n",
     "This Notebook is intended to record updates to the COS-Halos database.\n",
     "\n",
     "Version History:\n",
     "\n",
-    " * v1.0 -- 09 Feb 2016 by JXP"
+    " * v1.0 -- 09 Feb 2016 by JXP\n",
+    " * v1.1 -- 13 Apr 2016 by JXP"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -301,63 +302,14 @@
      "output_type": "stream",
      "text": [
       "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load COS-Halos\n",
-      "Skipping a likely folder: CGM_JSON"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1128.01 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1260.42 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1334.53 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=944.523 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1193.29 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1037.62 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1304.37 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1302.17 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1190.42 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1025.72 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=2803.53 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1526.71 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1550.77 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n",
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=949.743 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:237: UserWarning: Input absline with wrest=1242.8 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
+      "Skipping a likely folder: CGM_JSON\n"
      ]
     }
    ],
    "source": [
     "reload(pch)\n",
     "cos_halos_v10 = pch.COSHalos()\n",
-    "cos_halos_v10.load_sys(tfile=cos_halos.cdir+'/cos-halos_systems.v1.0.tar.gz')"
+    "cos_halos_v10.load_sys(tfile=cos_halos_v10.cdir+'/cos-halos_systems.v1.0.tar.gz')"
    ]
   },
   {
@@ -369,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import json\n",
-    "LLS_file = cos_halos_v10.cdir + '/Updates/COS_Halos_LLS.json'\n",
+    "LLS_file = cos_halos_v10.cdir + '/Updates/COS_Halos_LLS.json'  # Generated in paper/COS-Halos/Patchup/Analysis\n",
     "with open(LLS_file) as json_file:\n",
     "    fdict = json.load(json_file)\n",
     "#fdict"
@@ -391,18 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "names = cos_halos.name"
+    "names = cos_halos_v10.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -444,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -458,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -471,10 +423,11 @@
        " 'J1233+4758_94_38': {'ion': {'6,3': {'flag_N': 0}}},\n",
        " 'J1342-0053_157_10': {'trans': {'OI 971': {'flag_N': 3}}},\n",
        " 'J1435+3604_68_12': {'trans': {'OI 971': {'flag_N': 3}}},\n",
-       " 'J1619+3342_113_40': {'ion': {'6,2': {'flag_N': 3}}}}"
+       " 'J1619+3342_113_40': {'ion': {'6,2': {'flag_N': 3}}},\n",
+       " 'J2345-0059_356_12': {'ion': {'14,3': {'flag_N': 3}}}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -495,8 +448,11 @@
      "output_type": "stream",
      "text": [
       "<AbsComponent: 12:33:35.1 +47:58:00.5, Name=CIII_z0.22210, Zion=(6,3), Ej=0 1 / cm, z=0.222103, vlim=-600 km / s,600 km / s>\n",
-      "> <ipython-input-16-af7e6519a149>(9)<module>()\n",
-      "-> for ionkey in up_ion_data[key][mod_type].keys():\n"
+      "<AbsComponent: 23:45:00.4 -00:59:36.1, Name=SiIII_z0.25389, Zion=(14,3), Ej=0 1 / cm, z=0.25389, vlim=0 km / s,143 km / s, logN=13.0513, sig_N=0.0579743, flag_N=3>\n",
+      "<AbsComponent: 16:19:16.5 +33:42:38.4, Name=CII_z0.14137, Zion=(6,2), Ej=0 1 / cm, z=0.141367, vlim=-160 km / s,55 km / s, logN=14.3184, sig_N=0.0391796, flag_N=3>\n",
+      "<AbsComponent: 09:43:31.6 +05:31:31.5, Name=NII_z0.35295, Zion=(7,2), Ej=0 1 / cm, z=0.352952, vlim=-50 km / s,450 km / s, logN=14.711, sig_N=8.36472e-14, flag_N=3>\n",
+      "<AbsComponent: 09:43:31.6 +05:31:31.5, Name=CII_z0.35295, Zion=(6,2), Ej=0 1 / cm, z=0.352952, vlim=-15 km / s,547 km / s, logN=14.4414, sig_N=0.0921919, flag_N=3>\n",
+      "<AbsComponent: 09:10:29.8 +10:14:13.6, Name=NII_z0.14274, Zion=(7,2), Ej=0 1 / cm, z=0.142738, vlim=-212 km / s,40 km / s, logN=14.3247, sig_N=0.135632, flag_N=3>\n"
      ]
     }
    ],
@@ -519,7 +475,7 @@
     "                    if att_key == 'flag_N':\n",
     "                        cos_halos_v10.cgm_abs[mt[0]].igm_sys._components[mtZi].flag_N = up_ion_data[key][mod_type][ionkey][att_key]\n",
     "                print(cos_halos_v10.cgm_abs[mt[0]].igm_sys._components[mtZi])\n",
-    "                xdb.set_trace()"
+    "                #xdb.set_trace()"
    ]
   },
   {
@@ -531,24 +487,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tarfil = cos_halos.cdir+'/cos-halos_systems.v1.1.tar.gz'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cos_halos.write_survey(tarfil)"
+    "tarfil = cos_halos_v10.cdir+'/cos-halos_systems.v1.1.tar.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.1.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cgmsurvey.py:70: UserWarning: Modify to write directly to tar file\n",
+      "  warnings.warn(\"Modify to write directly to tar file\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "cos_halos_v10.write_survey(tarfil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CGM_Survey: COS-Halos nsys=44, ref=Tumlinson+11; Werk+12; Tumlinson+13; Werk+13; Werk+14>\n",
+       "<IGMSystem: CGM 02:26:14.5 00:15:29.8, 0.22744, NHI=14.2487, Z/H=-1>\n",
+       "<IGMSystem: CGM 04:01:49 -05:40:56.6, 0.219685, NHI=15.4493, Z/H=-0.7>\n",
+       "<IGMSystem: CGM 08:03:59.2 43:32:58.4, 0.253473, NHI=14.7821, Z/H=-0.9>\n",
+       "<IGMSystem: CGM 09:10:29.8 10:14:13.6, 0.264118, NHI=16.5753, Z/H=-0.6>\n",
+       "<IGMSystem: CGM 09:10:29.8 10:14:13.6, 0.142738, NHI=14.7577, Z/H=-0.7>\n",
+       "<IGMSystem: CGM 09:14:40.4 28:23:30.6, 0.244314, NHI=15.452, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 09:25:54.7 40:04:14.1, 0.247453, NHI=19.55, Z/H=-0.7>\n",
+       "<IGMSystem: CGM 09:28:38 60:25:21, 0.154, NHI=19.35, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 09:35:18.2 02:04:15.5, 0.26228, NHI=12.6793, Z/H=-2>\n",
+       "<IGMSystem: CGM 09:43:31.6 05:31:31.5, 0.228386, NHI=16.2441, Z/H=-0.5>\n",
+       "<IGMSystem: CGM 09:43:31.6 05:31:31.5, 0.143112, NHI=14.8833, Z/H=-2>\n",
+       "<IGMSystem: CGM 09:43:31.6 05:31:31.5, 0.352952, NHI=16.6466, Z/H=-1.6>\n",
+       "<IGMSystem: CGM 09:50:00.7 48:31:29.4, 0.211936, NHI=17.9064, Z/H=-1.1>\n",
+       "<IGMSystem: CGM 10:09:02.1 07:13:43.9, 0.355687, NHI=18, Z/H=-0.6>\n",
+       "<IGMSystem: CGM 10:09:02.1 07:13:43.9, 0.227841, NHI=15.2464, Z/H=-0.3>\n",
+       "<IGMSystem: CGM 10:16:22.6 47:06:43.3, 0.251955, NHI=17.097, Z/H=-0.1>\n",
+       "<IGMSystem: CGM 10:16:22.6 47:06:43.3, 0.166137, NHI=15.4404, Z/H=-0.1>\n",
+       "<IGMSystem: CGM 11:12:39.1 35:39:28.2, 0.246704, NHI=15.7925, Z/H=-0.3>\n",
+       "<IGMSystem: CGM 11:33:27.8 03:27:19.2, 0.236701, NHI=17.689, Z/H=-1>\n",
+       "<IGMSystem: CGM 11:33:27.8 03:27:19.2, 0.154488, NHI=15.0913, Z/H=-1>\n",
+       "<IGMSystem: CGM 11:57:58.7 -00:22:20.9, 0.163781, NHI=17.0067, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 12:20:35.1 38:53:16.4, 0.273713, NHI=15.8817, Z/H=-0.6>\n",
+       "<IGMSystem: CGM 12:33:35.1 47:58:00.5, 0.222103, NHI=16.7391, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 12:33:04.1 -00:31:34.2, 0.318496, NHI=15.5664, Z/H=-1>\n",
+       "<IGMSystem: CGM 12:41:54 57:21:07.4, 0.205262, NHI=17.8261, Z/H=-0.5>\n",
+       "<IGMSystem: CGM 12:41:54 57:21:07.4, 0.217803, NHI=15.2875, Z/H=0>\n",
+       "<IGMSystem: CGM 12:45:11.3 33:56:10.1, 0.192478, NHI=14.7597, Z/H=-1.1>\n",
+       "<IGMSystem: CGM 13:22:22.7 46:45:35.2, 0.214179, NHI=17.1371, Z/H=-0.1>\n",
+       "<IGMSystem: CGM 13:30:45.2 28:13:21.5, 0.192365, NHI=17.0268, Z/H=-0.2>\n",
+       "<IGMSystem: CGM 13:42:51.6 -00:53:45.3, 0.227017, NHI=18.0368, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 13:42:51.6 -00:53:45.3, 0.201268, NHI=12.4331, Z/H=-2>\n",
+       "<IGMSystem: CGM 14:19:10.2 42:07:46.9, 0.179248, NHI=16.6254, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 14:35:11.5 36:04:37.2, 0.26226, NHI=15.2504, Z/H=-0.4>\n",
+       "<IGMSystem: CGM 14:35:11.5 36:04:37.2, 0.202366, NHI=19.8, Z/H=-1.2>\n",
+       "<IGMSystem: CGM 14:37:26.1 50:45:55.8, 0.245999, NHI=14.53, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 14:45:11.3 34:28:25.5, 0.21764, NHI=15.0732, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 15:14:28.6 36:19:58, 0.212227, NHI=14.705, Z/H=-0.5>\n",
+       "<IGMSystem: CGM 15:50:48.3 40:01:44.9, 0.312467, NHI=16.502, Z/H=-0.8>\n",
+       "<IGMSystem: CGM 15:50:48.3 40:01:44.9, 0.321785, NHI=13.8551, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 15:55:04.4 36:28:48, 0.189297, NHI=17.1672, Z/H=-0.8>\n",
+       "<IGMSystem: CGM 16:17:11.4 06:38:33.5, 0.152579, NHI=13.1202, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 16:19:16.5 33:42:38.4, 0.141367, NHI=14.9584, Z/H=-0.1>\n",
+       "<IGMSystem: CGM 22:57:38.2 13:40:45.5, 0.17675, NHI=12.531, Z/H=-1.5>\n",
+       "<IGMSystem: CGM 23:45:00.4 -00:59:36.1, 0.25389, NHI=15.995, Z/H=-0.3>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_halos_v10"
    ]
   },
   {
