small edit + notebook

--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "import yaml\n",
-    "filename = cos_halos_v10.cdir + '/Updates/COS_Halos_ions_updates.yaml'\n",
+    "filename = cos_halos_v10.cdir + '/Updates/COS_Halos_ions_updates.v1.0.yaml'\n",
     "with open(filename, 'r') as infile:\n",
     "        up_ion_data = yaml.load(infile)"
    ]
