add flag_NHI as needed

--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -372,18 +372,16 @@
       "H100: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA.fits\n",
       "H100: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_ions.json\n",
       "Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_sys.tar.gz\n",
-      "Skipping a likely folder: SYS\n"
+      "Skipping a likely folder: SYS"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<IGMSurvey: nsys=100, type=DLA, ref=Neeleman+13>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
     }
    ],
    "source": [
