--- a/docs/examples/DLA_abund_cookbook.ipynb
+++ b/docs/examples/DLA_abund_cookbook.ipynb
@@ -271,7 +271,10 @@
     "collapsed": true
    },
    "source": [
-    "## 4. Update Components"
+    "## 4. Update Components\n",
+    "\n",
+    "The fill_ionN method synthesizes multiple components of the same ion (and with the \n",
+    "same $E_j$).  These are then pushed into the _ionN table."
    ]
   },
   {
@@ -366,7 +369,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Relative Abundances (relative to Solar)"
+    "## 5. Relative Abundances (relative to Solar)\n",
+    "\n",
+    "The following method takes all column densities measured\n",
+    "from low-ion transitions from the ground state.  It assumes\n",
+    "no ionization corrections."
    ]
   },
   {
