--- a/docs/examples/COS_Dwarfs_updates.ipynb
+++ b/docs/examples/COS_Dwarfs_updates.ipynb
@@ -354,6 +354,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-dwarfs_systems.v1.1.tar.gz to load COS-Halos\n",
+      "Skipping a likely folder: CGM_JSON\n"
+     ]
+    }
+   ],
+   "source": [
+    "cos_dwarfs_v11 = pch.COSDwarfs()\n",
+    "cos_dwarfs_v11.load_sys(tfile=cos_dwarfs_v11.cdir+'/cos-dwarfs_systems.v1.1.tar.gz', chk_lowz=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'HI': {u'Dv': <Quantity 283.0 km / s>,\n",
+       "  u'JF_fcover': <Quantity 0.0 km / s>,\n",
+       "  u'X_fcover': 0.8837209302325582,\n",
+       "  u'delta_v': <Quantity -56.288340068336055 km / s>,\n",
+       "  u'fedg': 0.23797783280800872,\n",
+       "  u'flg': 3,\n",
+       "  u'fmm': 0.1903822662465156,\n",
+       "  u'v_peak': <Quantity -3503.3132439986807 km / s>,\n",
+       "  u'zero_pk': 0.9748900721315327},\n",
+       " u'Metal': {u'Dv': <Quantity 98.0 km / s>,\n",
+       "  u'JF_fcover': <Quantity 0.0 km / s>,\n",
+       "  u'X_fcover': 0.9285714285714286,\n",
+       "  u'delta_v': <Quantity -18.821560172854646 km / s>,\n",
+       "  u'fedg': 0.3842759346263574,\n",
+       "  u'flg': 3,\n",
+       "  u'fmm': 0.07685518692450995,\n",
+       "  u'v_peak': <Quantity -3764.8193182889368 km / s>,\n",
+       "  u'zero_pk': 0.6823904494895773}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_dwarfs_v11.cgm_abs[0].igm_sys.kin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
