--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Halos Database (v1.1)\n",
+    "# COS-Halos Database (v1.1.1)\n",
     "\n",
     "This Notebook is intended to record updates to the COS-Halos database.\n",
     "\n",
     "Version History:\n",
     "\n",
-    " * v1.0 -- 09 Feb 2016 by JXP\n",
-    " * v1.1 -- 13 Apr 2016 by JXP"
+    " * v1.0   -- 09 Feb 2016 by JXP\n",
+    " * v1.1   -- 13 Apr 2016 by JXP\n",
+    " * v1.1.1 -- 14 Jul 2016 by JXP  [includes 2 values for sig_NHI]"
    ]
   },
   {
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -315,6 +316,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data/cos-halos_systems.v1.1.tar.gz to load COS-Halos\n",
+      "Skipping a likely folder: CGM_JSON\n",
       "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load COS-Halos\n",
       "Skipping a likely folder: CGM_JSON\n"
      ]
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +385,9 @@
     "    # Fill in \n",
     "    if fdict[key]['flag_NHI'] == 1:\n",
     "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][0]\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.sig_NHI = (fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][1])/2.\n",
+    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.sig_NHI = [fdict[key]['fit_NHI'][0]-fdict[key]['fit_NHI'][1],\n",
+    "                                                        fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][0]]\n",
+    "        #pdb.set_trace()\n",
     "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 1\n",
     "    elif fdict[key]['flag_NHI'] == 2:\n",
     "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][1]\n",
@@ -410,21 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import yaml\n",
-    "filename = cos_halos_v10.cdir + '/Updates/COS_Halos_ions_updates.v1.0.yaml'\n",
+    "filename = cos_halos_v10.cdir + '/Updates/COS_Halos_ions_updates_v1.0.yaml'\n",
     "with open(filename, 'r') as infile:\n",
     "        up_ion_data = yaml.load(infile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -444,7 +449,7 @@
        "   'SiIII 1206': {'flag_N': 0}}}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -559,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -570,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -583,8 +588,9 @@
        " u'b': <Quantity 0.0 km / s>,\n",
        " u'coord': <SkyCoord (ICRS): (ra, dec) in deg\n",
        "     (142.15833333, 60.4225)>,\n",
-       " u'flag_EW': 2,\n",
+       " u'flag_EW': 1,\n",
        " u'flag_N': 2,\n",
+       " u'flag_origCH': 9,\n",
        " u'logN': 13.782555798577503,\n",
        " u'sig_EW': <Quantity 0.05809608690608618 Angstrom>,\n",
        " u'sig_N': <Quantity 5924195705267.877 1 / cm2>,\n",
@@ -596,13 +602,98 @@
        " u'z': 0.1540004312992096}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cgm.igm_sys.get_absline('SiIII 1206').attrib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0.15000000596046448)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cgm.igm_sys.flag_NHI, cgm.igm_sys.sig_NHI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'J0226+0015_268_22', 0.030700907111167908)\n",
+      "(u'J0401-0540_67_24', 0.032458651810884476)\n",
+      "(u'J0803+4332_306_20', 0.03730316087603569)\n",
+      "(u'J0910+1014_242_34', [0.07023411371237387, 0.040133779264216685])\n",
+      "(u'J0910+1014_34_46', 0.026249060407280922)\n",
+      "(u'J0914+2823_41_27', 0.027630334720015526)\n",
+      "(u'J0925+4004_196_22', 0.15000000596046448)\n",
+      "(u'J0928+6025_110_35', 0.15000000596046448)\n",
+      "(u'J0935+0204_15_28', -9.989999771118164)\n",
+      "(u'J0943+0531_106_34', 0.05258878320455551)\n",
+      "(u'J0943+0531_216_61', 0.06319866329431534)\n",
+      "(u'J0943+0531_227_19', 0.038834087550640106)\n",
+      "(u'J0950+4831_177_27', 0.05671226605772972)\n",
+      "(u'J1009+0713_170_9', -9.989999771118164)\n",
+      "(u'J1009+0713_204_17', 0.032954033464193344)\n",
+      "(u'J1016+4706_274_6', [0.020066889632108342, 0.010033444816052395])\n",
+      "(u'J1016+4706_359_16', 0.028051074594259262)\n",
+      "(u'J1112+3539_236_14', 0.1278170794248581)\n",
+      "(u'J1133+0327_110_5', 0.05999999865889549)\n",
+      "(u'J1133+0327_164_21', 0.04214244708418846)\n",
+      "(u'J1157-0022_230_7', 0.03912068158388138)\n",
+      "(u'J1220+3853_225_38', 0.06084488332271576)\n",
+      "(u'J1233+4758_94_38', [0.05351170568561869, 0.02675585284280757])\n",
+      "(u'J1233-0031_168_7', 0.0224356260150671)\n",
+      "(u'J1241+5721_199_6', 0.04223781079053879)\n",
+      "(u'J1241+5721_208_27', 0.06712911278009415)\n",
+      "(u'J1245+3356_236_36', 0.03669143468141556)\n",
+      "(u'J1322+4645_349_11', [0.03344481605351035, 0.02675585284280757])\n",
+      "(u'J1330+2813_289_28', [0.15050167224080369, 0.08026755852842626])\n",
+      "(u'J1342-0053_157_10', 0.029872488230466843)\n",
+      "(u'J1342-0053_77_10', -9.989999771118164)\n",
+      "(u'J1419+4207_132_30', [0.2909698996655514, 0.09030100334448221])\n",
+      "(u'J1435+3604_126_21', 0.05929992347955704)\n",
+      "(u'J1435+3604_68_12', 0.10000000149011612)\n",
+      "(u'J1437+5045_317_38', 0.11999999731779099)\n",
+      "(u'J1445+3428_232_33', 0.05558601766824722)\n",
+      "(u'J1514+3619_287_14', 0.028403183445334435)\n",
+      "(u'J1550+4001_197_23', 0.022709522396326065)\n",
+      "(u'J1550+4001_97_33', 0.08560911566019058)\n",
+      "(u'J1555+3628_88_11', [0.2608695652173907, 0.13043478260869534])\n",
+      "(u'J1617+0638_253_39', -9.989999771118164)\n",
+      "(u'J1619+3342_113_40', 0.030996013432741165)\n",
+      "(u'J2257+1340_270_40', -9.989999771118164)\n",
+      "(u'J2345-0059_356_12', 0.036028314381837845)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cgm_abs in cos_halos_v10.cgm_abs:\n",
+    "    print(cgm_abs.name, cgm_abs.sig_NHI)"
    ]
   },
   {
