--- a/docs/examples/COS_Dwarfs_updates.ipynb
+++ b/docs/examples/COS_Dwarfs_updates.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -516,7 +516,7 @@
       "Loading abundances from Asplund2009\n",
       "Abundances are relative by number on a logarithmic scale with H=12\n",
       "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-dwarfs_systems.v1.0.tar.gz to load COS-Halos\n",
-      "Skipping a likely folder: CGM_JSON"
+      "Skipping a likely folder: CGM_JSON\n"
      ]
     }
    ],
@@ -535,22 +535,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'/Users/xavier/Dropbox/COS-Halos-Data//Kin/cosdwarfs_kin_driver.dat'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cos_dwarfs_v10.kin_init_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J0155-0857, 329_403\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J0242-0759, 84_223\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J0912+2957, 20_223\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J1117+2634, 114_210\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J1210+3157, 65_308\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J1211+3657, 312_196\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J1357+1704, 93_248\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for J1545+0936, 285_81\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for PG1049-005, 316_78\n",
+      "  cgm_abs.gal_id))\n",
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:443: UserWarning: load_kin: No kinematics for PG1202+281, 165_95\n",
+      "  cgm_abs.gal_id))\n"
+     ]
+    }
+   ],
    "source": [
     "cos_dwarfs_v10.load_abskin(flg=1)"
    ]
@@ -637,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -648,11 +686,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: /Users/xavier/Dropbox/COS-Halos-Data//cos-dwarfs_systems.v1.1.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cgmsurvey.py:74: UserWarning: Modify to write directly to tar file\n",
+      "  warnings.warn(\"Modify to write directly to tar file\")\n"
+     ]
+    }
+   ],
    "source": [
     "cos_dwarfs_v10.write_survey(tarfil)"
    ]
